--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://glitch.com/edit/#!/glitch-mvp-node"
   },
   "author": "Robnot",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
   "keywords": [
     "node",
     "glitch"
